[package]
name = "textblocks"
version = "0.1.0"
edition = "2021"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
description = "A library for working with text blocks."
readme = "README.md"
homepage = "https://github.com/ofersadan85/textblocks"
repository = "https://github.com/ofersadan85/textblocks"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
